# qdevelop

./: CMakeLists.txt  ChangeLog.txt  QDevelop.pro  README.cmake  Setup.iss  qdevelop.desktop
branches/divius/: CMakeLists.txt  QDevelop.pro
branches/trent.zhou/: README.txt
deb-pkg/debian/: copyright  manpage.1.ex  menu  preinst.ex  prerm.ex  rules  watch
include/: imainwindow.h
plugins/formatting-astyle/: astyle.ui  astyledialogimpl.cpp  astyledialogimpl.h  astyleplugin.cpp  formatting-astyle.pro
plugins/tools-regexp-planner/: qpjvalidindicatorlabel.h  rep.pro  replugin.cpp  replugin.h
resources/: resources.qrc
resources/images/: Thumbs.db
resources/templates/: impl.h.template
resources/translations/: QDevelop_Chinese.qm  QDevelop_Chinese.ts  QDevelop_Czech.qm  QDevelop_Czech.ts  QDevelop_Dutch.qm  QDevelop_Dutch.ts  QDevelop_French.qm  QDevelop_French.ts  QDevelop_German.qm  QDevelop_German.ts  QDevelop_Hungarian.qm  QDevelop_Hungarian.ts  QDevelop_Italian.qm  QDevelop_Italian.ts  QDevelop_Japanese.qm  QDevelop_Japanese.ts  QDevelop_Polish.qm  QDevelop_Polish.ts  QDevelop_Portuguese.qm  QDevelop_Portuguese.ts  (+10 more)
src/: InitCompletion.cpp  InitCompletion.h  addexistantimpl.cpp  addexistantimpl.h  addnewclassimpl.cpp  addnewclassimpl.h  addnewclassmethodimpl.cpp  addnewclassmethodimpl.h  addnewclassvariableimpl.cpp  addnewclassvariableimpl.h  addnewimpl.cpp  addscopeimpl.h  addsetgetimpl.cpp  addsetgetimpl.h  assistant.cpp  assistant.h  build.cpp  build.h  cpphighlighter.cpp  cpphighlighter.h  debug.cpp  debug.h  editor.cpp  editor.h  findfileimpl.cpp  findfileimpl.h  getlastversion.cpp  getlastversion.h  iproject.h  lineedit.cpp  linenumbers.cpp  linenumbers.h  logbuild.cpp  logbuild.h  main.cpp  mainimpl.cpp  mainimpl.h  misc.cpp  misc.h  newprojectimpl.cpp  (+27 more)
tags/v0.21/: CMakeLists.txt
tags/v0.21/resources/: resources.qrc
tags/v0.21/src/: editor.h  mainimpl.h  projectmanager.h  projectpropertieimpl.cpp  projectpropertieimpl.h  promptreplaceimpl.h  replaceimpl.h  toolscontrolimpl.cpp  treeclasses.cpp
tags/v0.21/ui/: addnew.ui  exechoice.ui  main.ui
tags/v0.24/: CMakeLists.txt  ChangeLog.txt  QDevelop.pro  qdevelop.spec
tags/v0.24/resources/: resources.qrc
tags/v0.24/resources/translations/: QDevelop_Czech.qm  QDevelop_French.qm  QDevelop_French.ts  QDevelop_German.qm  QDevelop_German.ts  QDevelop_Italian.ts  QDevelop_Polish.qm  QDevelop_Russian.qm  QDevelop_Turkish.ts  QDevelop_Ukrainian.ts
tags/v0.24/src/: InitCompletion.cpp  InitCompletion.h  addexistantimpl.cpp  addnewclassimpl.cpp  addnewclassmethodimpl.h  addnewclassvariableimpl.cpp  addnewimpl.cpp  debug.h  designer.cpp  editor.cpp  findfileimpl.cpp  linenumbers.cpp  logbuild.cpp  mainimpl.h  misc.cpp  newprojectimpl.cpp  projectmanager.cpp  projectmanager.h  subclassingimpl.cpp  toolscontrolimpl.h  treeproject.h
tags/v0.24/src/QIComplete/: parse.cpp
tags/v0.24/ui/: about.ui  newproject.ui  newvariable.ui  openfile.ui  options.ui  promptreplace.ui
trunk/: CMakeLists.txt  ChangeLog.txt  QDevelop.pro  README.cmake  README.txt  qdevelop.spec
trunk/QDevelop-0.20/: QDevelop.pro
trunk/QDevelop-0.20/resources/images/: Thumbs.db
trunk/QDevelop-0.20/resources/translations/: QDevelop_Chinese.ts  QDevelop_French.ts  QDevelop_German.ts  QDevelop_Spanish.qm
trunk/QDevelop-0.20/src/: addexistantimpl.cpp  assistant.cpp  build.h  cpphighlighter.cpp  lineedit.h  main.cpp  mainimpl.cpp  misc.cpp  misc.h  optionsimpl.h  parametersimpl.cpp  projectmanager.cpp  projectpropertieimpl.h  selectionborder.cpp  shortcutsimpl.cpp  stackimpl.cpp  subclassingimpl.cpp  subclassingimpl.h  treeclasses.cpp
trunk/QDevelop-0.20/src/QIComplete/: parse.cpp
trunk/QDevelop-0.20/ui/: options.ui  projectpropertie.ui  replace.ui
trunk/plugins/formatting-astyle/: astyle.h  astyle.ui  astyledialogimpl.cpp  astyleplugin.cpp  astyleplugin.h
trunk/plugins/tools-regexp-planner/: qpjchecktextedit.h  qpjregexpplannerdialog.cpp  qpjregexpplannerdialog.h  qpjvalidindicatorlabel.cpp  qpjvalidindicatorlabel.h
trunk/plugins/tools-regexp-planner/translations/: RePlanner_French.ts  RePlanner_German.ts  RePlanner_Russian.ts
trunk/resources/: resources.qrc
trunk/resources/images/: SplashQDevelop.pspimage  Thumbs.db
trunk/resources/templates/: impl.cpp.template
trunk/resources/translations/: QDevelop_Chinese.qm  QDevelop_Chinese.ts  QDevelop_Czech.qm  QDevelop_Czech.ts  QDevelop_Dutch.qm  QDevelop_Dutch.ts  QDevelop_French.qm  QDevelop_French.ts  QDevelop_German.qm  QDevelop_German.ts  QDevelop_Hungarian.qm  QDevelop_Hungarian.ts  QDevelop_Italian.qm  QDevelop_Italian.ts  QDevelop_Japanese.qm  QDevelop_Japanese.ts  QDevelop_Polish.qm  QDevelop_Polish.ts  QDevelop_Portuguese.qm  QDevelop_Portuguese.ts  QDevelop_Russian.qm  QDevelop_Russian.ts  QDevelop_Spanish.qm  QDevelop_Spanish.ts  QDevelop_Turkish.qm  QDevelop_Turkish.ts  QDevelop_Ukrainian.qm  QDevelop_Ukrainian.ts  QDevelop_Vietnamese.qm  QDevelop_Vietnamese.ts
trunk/src/: InitCompletion.cpp  InitCompletion.h  addexistantimpl.cpp  addexistantimpl.h  addnewclassimpl.cpp  addnewclassmethodimpl.cpp  addnewclassmethodimpl.h  addnewimpl.cpp  addnewimpl.h  addsetgetimpl.h  assistant.cpp  assistant.h  build.cpp  build.h  cpphighlighter.cpp  cpphighlighter.h  debug.cpp  debug.h  designer.h  editor.cpp  editor.h  findfileimpl.cpp  findfileimpl.h  lineedit.cpp  linenumbers.cpp  linenumbers.h  logbuild.cpp  logbuild.h  main.cpp  mainimpl.cpp  mainimpl.h  misc.cpp  misc.h  newprojectimpl.cpp  newprojectimpl.h  openfileimpl.h  optionsimpl.cpp  optionsimpl.h  parametersimpl.cpp  pluginsinterfaces.h  (+20 more)
trunk/src/QIComplete/: parse.cpp  readtags.cpp  tree.cpp  tree.h
trunk/ui/: about.ui  addnewclass.ui  findfiles.ui  main.ui  newproject.ui  newvariable.ui  options.ui  projectpropertie.ui  registers.ui  replacewidget.ui  subclassing.ui  toolsControl.ui
ui/: about.ui  addexistant.ui  addnew.ui  addnewclassmethod.ui  addnewclassvariable.ui  findfiles.ui  main.ui  newproject.ui  options.ui  parameters.ui  projectpropertie.ui  shortcuts.ui  subclassing.ui  toolsControl.ui
(+331 files in other folders)
